--- a/web/agregarEmpleado.xhtml
+++ b/web/agregarEmpleado.xhtml
@@ -5,17 +5,20 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:p="http://primefaces.org/ui" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      template="/WEB-INF/templeate/Layout.xhtml">
+          
     <h:head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
-    <h:body>
-        <h:form>
+    <ui:define name="cuerpo">
+        
+    <h:form>
             <h:panelGrid>
 
                 <p:outputLabel value="Numero "></p:outputLabel>
@@ -59,5 +62,5 @@ and open the template in the editor.
                     <h:outputText value="#{emp.fkIdPersona.apellidoPaterno}" />
                 </p:column></p:dataTable>
         </h:form>
-    </h:body>
-</html>
+    </ui:define>   
+</ui:composition>
