--- a/web/polyline.xhtml
+++ b/web/polyline.xhtml
@@ -21,12 +21,16 @@ and open the template in the editor.
         </h:head>
         <h:body>     
             <h:form>
+                <label> Ingrese 1 de ronda</label>
+                <p:inputText value="#{polylines.idRonda}"></p:inputText>
+
+
+                <p:commandButton value="Ver ruta" actionListener="#{polylines.marcar()}" ajax="false"></p:commandButton>
                 <p:growl id="growl" showDetail="true" />
                 <p:layoutUnit position="center">
                     Welcome to PrimeFaces
                     <p:gmap id="map"  center="32.6353749,-115.4120134" zoom="18" type="ROADMAP"  model="#{polylines.simpleModel}" style="width:150%;height:680px">
                         <p:ajax event="overlaySelect" listener="#{polylines.clicMarker}" update="growl"/>    
-
                     </p:gmap> 
                 </p:layoutUnit>
             </h:form>
