--- a/web/catalogoCtoTelefono.xhtml
+++ b/web/catalogoCtoTelefono.xhtml
@@ -5,18 +5,20 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                template="/WEB-INF/templeate/Layout.xhtml">
+                    
 
     <h:head>
         <title>Contactos</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
-    <h:body>
-        <div class="Container100">
+    <ui:define name="cuerpo"> 
+    <div class="Container100">
             <div class="ContainerIndent">
                 <div class="ShadowBox TexAlCenter whiteback BlueBorderedBox">
                     <h1 class="BigTopic">Catalogo Contactos</h1>
@@ -34,6 +36,7 @@ and open the template in the editor.
                                     <p:outputLabel value="Prioridad "></p:outputLabel>
                                     <p:inputText label="Prioridad" value="#{contactosUI.contactosHelper.ctoTelefono.prioridad}"/>                            
                                     <p:outputLabel value="Servicio: "></p:outputLabel>
+
                                     <p:selectOneMenu id="service" value="#{contactosUI.contactosHelper.idServicioSelected}" label="Servicios">
                                         <f:selectItems value="#{contactosUI.listaServicios}" var="serv" itemValue="#{serv.idCtoServicio}" itemLabel="#{serv.servicio}"/>
                                     </p:selectOneMenu>
@@ -105,5 +108,5 @@ and open the template in the editor.
 
             </div>
         </div>
-    </h:body>
-</html>
+</ui:define>
+</ui:composition>
