--- a/web/usuarios.xhtml
+++ b/web/usuarios.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+.<?xml version="1.0" encoding="UTF-8"?>
 <!--
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
@@ -57,7 +57,7 @@ and open the template in the editor.
                                 </p:column>
 
 
-                                <p:messages id="messages" showDetail="true" autoUpdate="true" />
+                                <p:messages id="messages" showDetail="true" autoUpdate="true" showSummary="true" />
 
                                 <h:panelGrid columns="2" id="matchGrid" cellpadding="5">                   
                                     <h:outputLabel for="pwd1" value="Password 1: *" />
