validacion de registro empleados

--- a/web/empleado.xhtml
+++ b/web/empleado.xhtml
@@ -56,6 +56,8 @@
                             <p:commandButton value="Registrar" actionListener="#{empleadoUI.registar()}" ajax="true" update=":formEmpleados:dtEmp, pgEmpleadoDatos">
                                 <p:confirm header="Confirmation" message="Are you sure?" icon="ui-icon-alert" />
                             </p:commandButton>
+                            
+                            <!--No cumple funciones-->
                             <p:commandButton value="Modificar" actionListener="#{empleadoUI.modificar()}" ajax="true" update=":formEmpleados:dtEmp, pgEmpleadoDatos">
                                 <p:confirm header="Confirmation" message="Are you sure?" icon="ui-icon-alert" />
                             </p:commandButton>
